[package]
name = "sca_dataset"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sca_dataset"
crate-type = ["cdylib"]

[dependencies]
average = "0.16.0"
float-ord = "0.3.2"
hdf5 = { package = "hdf5-metno", version = "0.10.0" }
hdf5-metno-sys = "0.10.1"
log = "0.4.27"
modular_arithmetic = "0.2.0"
nalgebra = "0.33.2"
ndarray = "0.16.1"
ord_subset = "3.1.1"
pyo3 = "0.25.0"
pyo3-log = "0.12.4"
rand = "0.9.1"
rand_distr = "0.5.1"
rayon = "1.10.0"
statrs = "0.18.0"
