[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "sca_dataset"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.58.5",
    "h5py==3.14.0",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.3",
    "maturin==1.9.0",
    "numpy==2.3.1",
    "packaging==25.0",
    "patchelf==0.17.2.2",
    "pillow==11.3.0",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "tqdm==4.67.1"
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"



